css/themes/custom/material/custom-material.css
/*Ajustes Mauricio*/
button.btn-default:focus, button.btn-default:active{
    background: #272f61;
}

button.btn-default {
	color: white;
	background: #3d488b;
}

button.btn-default:hover{
	opacity: 1 !important;
	background: #272f61;
	color:rgb(255, 230, 0) !important;
}

.k-grid-header .k-header:focus, .k-grid-header .k-header a.k-link:focus {
    color: rgb(255, 229, 0) !important;
    opacity: 1;
}

.k-grid-header .k-header, .k-grid-header .k-header a.k-link {
    color: white !important;
}

.k-grid-header .k-header:hover, .k-grid-header .k-header:hover a{
    color:rgb(255, 230, 0) !important;
}

.k-pager-wrap .k-link:focus, .k-pager-wrap .k-pager-nav:focus{
    background-color:rgba(0,0,0,.07)
}

.k-link.k-pager-nav {
    color: #000 !important;
}

.k-grid-header .k-grid-filter:focus {
    color: rgb(255, 229, 0) !important;
}

.k-grid th {
    padding: 7px 22px;
    white-space: nowrap;
}

.k-grid-header {
    font-size: 16px;
}

.k-grid-header .k-header {
    position: relative;
    vertical-align: bottom;
    padding: 12px;
    background-color: #3d488b;
    color: #9298bb;
}

.k-grid td, .k-grid th {
    padding: 5px 24px;

}

.carousel-caption {
    color: #524646;
}

.k-link:link {
    color: #ffffff;
}

a.k-link {
    color: #fff;
    font-size: 12px;
    font-weight: normal;
    text-transform: uppercase;
    color:#ffffff;
}

.k-grid-header .k-grid-filter {
    /* padding: 8px; */
    width: calc(16px + 1.42857143em);
    height: calc(16px + 1.42857143em);
    box-sizing: border-box;
    outline: 0;
    line-height: 2;
    display: -ms-flexbox;
    display: flex;
    -ms-flex-align: center;
    align-items: center;
    -ms-flex-line-pack: center;
    align-content: center;
    -ms-flex-pack: center;
    justify-content: center;
    position: absolute;
    top: 5px;
    color: #b2b3b9;
    right: 5px;
    bottom: calc(8px + .28571429em);
    z-index: 1;
}

.k-grid-toolbar {
    text-align: right;
}

.k-grid-header .k-i-sort-asc-sm, .k-grid-header .k-i-sort-desc-sm, .k-grid-header .k-sort-order {
    color: rgba(255, 255, 255, 0.54);
}

.k-grid-header .k-link:hover, .k-grid-header .k-sorted {
    color: rgb(255, 229, 0);
    opacity: 1;
}

.k-grid-header .k-grid-filter:hover, .k-grid-header .k-header-column-menu:hover, .k-grid-header .k-hierarchy-cell .k-icon:hover {
    color: rgb(255, 230, 0);
    background-color: transparent;
}

.k-grid-toolbar .k-button {
    color:#3d488b;
    text-transform:uppercase;
    transition:200ms;
}

.k-grid-toolbar .k-button:hover {
    background-color:#3d488b;
    text-transform:uppercase;
    color:#fff;
    transition:200ms;
}

.navbar-default .navbar-nav>li>a>i {
    color: #fff;
    display: none;
}

.btn-space-table {
    display: flex;
    width: 80px;
}

.new-table-cron .btn-space-table .k-button {
    min-width: 24px;
    min-height: 24px;
}

/*Ajustes MaurĂ­cio F I N A L*/

::-webkit-scrollbar {
    width: 8px;
    height: 8px;
}
::-webkit-scrollbar-button {
    width: 0px;
    height: 0px;
}
::-webkit-scrollbar-thumb {
    background: #c0c0c082;
    border: 0px none #ffffff;
    border-radius: 0px;
    border-left: 1px solid #d7d7d7;
}
::-webkit-scrollbar-thumb:hover {
    background: #bdbdbd;
}
::-webkit-scrollbar-thumb:active {
    background: #bdbdbd;
}
::-webkit-scrollbar-track {
    background: transparent;
    border: 0px none #ffffff;
    border-left: 1px solid #cecece96;
}
::-webkit-scrollbar-track:hover {
    background: transparent;
}
::-webkit-scrollbar-track:active {
    background: #333333;
}
::-webkit-scrollbar-corner {
    background: transparent;
}

input:-webkit-autofill {
    -webkit-box-shadow: 0 0 0 30px white inset;
}

input:-webkit-autofill:focus {
    -webkit-box-shadow: 0 0 0 30px white inset;
}

.btn-fab {
    border-radius: 50%;
    font-size: 12px;
    height: 42px;
    margin: auto;
    min-width: 42px;
    width: 42px;
    padding: 0;
    position: relative;
}

.btn-primary {
    color: #fff !important;
    background-color: #337ab7 !important;
}

.btn-success {
    color: #fff !important;
    background-color: #257d25 !important;
}

.btn-info {
    color: #fff !important;
    background-color: #5bc0de !important;
}

.btn-warning {
    color: #fff !important;
    background-color: #f0ad4e !important;
}

.btn-danger {
    color: #fff !important;
    background-color: #ce3a36 !important;
}

.form-control {
    width:100%;
    box-shadow: none;
}

.k-checkbox-label {
    font-weight:unset;
}

label {
    font-weight:400;
}

.k-primary {
    color: hsla(0,0%,100%,.87);
    background-color: #3f51b5;
    border-color: #3f51b5;
}

.dynamic-image-container {
    border-style: dashed;
    border: 1px dashed #3f51b5;
    color: #000;
    border-radius: 5px;
    padding:20px;
}

.panel-default>.panel-heading {
    color: #fff;
    background-color: #5665be;
    border-color: #ddd;
}

body, h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4 {
    font-family: 'Roboto', 'Helvetica', 'Arial', sans-serif;
    font-weight: 400;
}

body {
    width: 100%;
    height: 100%;
    background:  #ffffff;
}

html {
    width: 100%;
    height: 100%;
}

@media only screen and (min-width: 768px) {
    body {
        background:  #f1f1f1;
    }
}

.bg {
    background-image:linear-gradient(-140deg, #75cff8, #00b2ff, #0091ff, #006aff, #065375);
    width:100%;
    height:100%;
}

/*
==============
Material Grid
==============
*/

.k-grid tbody .k-grid-edit, .k-grid tbody .k-grid-delete,
.k-grid tbody .k-grid-update, .k-grid tbody .k-grid-cancel{
    width: 28px;
    height: 28px;
    padding: 0;
    margin: 0px 5px -2px 0px;
    border-radius: 100%;
    background-color: #fff;
    color: #000;
}


.k-grid tbody .k-button:hover {
    background-color: #0470a0;
    color:#ffffff;
}

.k-button{
    font-weight: 400;
    transition: box-shadow .28s cubic-bezier(.4,0,.2,1);
    text-transform: capitalize;
    transition: 200ms;
}

.k-button[disabled]{
    background-color:#DCDCDC;
    color:#616161;
    opacity: 1;
}
/* ... */

